# fastapi-scaffold-with-auth

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  TEMPLATE_GUIDE.md  file::memory:  pyproject.toml  pytest.ini
.github/: TEMPLATE.md  repository.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  quality.yml  tests.yml
docs/: api-guide.md  architecture.md  getting-started.md
example_project/: pyproject.toml
example_project/app/core/: database.py  security.py
example_project/modules/auth/: router.py  schema.py
example_project/modules/users/: schema.py
fastapi_scaffold_with_auth/: __init__.py  __main__.py
tests/: conftest.py  test_auth.py  test_health.py  test_users.py
