[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-scaffold-with-auth"
version = "0.1.0"
description = "A production-ready FastAPI template with authentication, database migrations, rate limiting, and logging"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Dipto Karmakar", email = "diptokmk47@gmail.com"},
]
keywords = ["fastapi", "template", "authentication", "jwt", "sqlmodel", "alembic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlmodel>=0.0.32",
    "alembic>=1.18.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "pwdlib[argon2]>=0.3.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0",
]

postgres = [
    "psycopg[binary]>=3.1.0",
]

mysql = [
    "mysql-connector-python>=8.0.0",
]

all = [
    "fastapi-scaffold-with-auth[dev,postgres,mysql]",
]

[project.urls]
Homepage = "https://github.com/dipto0321/fastapi-scaffold-with-auth"
Documentation = "https://github.com/dipto0321/fastapi-scaffold-with-auth#readme"
Repository = "https://github.com/dipto0321/fastapi-scaffold-with-auth.git"
Issues = "https://github.com/dipto0321/fastapi-scaffold-with-auth/issues"

[tool.setuptools]
packages = ["fastapi_scaffold_with_auth"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313', 'py314']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
pythonpath = ["example_project"]
testpaths = ["../tests"]
